--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-start-app",
+  "name": "electron-quick-start",
   "version": "1.0.0",
   "private": true,
   "description": "🚀 Electron 快速上手",
