--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "electron-updater": "^5.0.1"
   },
   "devDependencies": {
-    "electron": "^19.0.1",
-    "electron-builder": "^23.0.3"
+    "electron": "^19.0.4",
+    "electron-builder": "^23.0.3",
+    "prettier": "^2.6.2"
   },
   "build": {
     "appId": "com.tlyboy.start",
