--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder -p always"
+    "dist": "electron-builder -p always",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "electron-updater": "^5.0.1"
