--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-quick-start",
   "version": "1.0.0",
   "private": true,
-  "description": "🚀 Electron 快速上手",
+  "description": "Electron 快速上手",
   "license": "MIT",
   "author": "Guany",
   "main": "main.js",
